--- a/app/main/posts/views/filters/filter-modal.html
+++ b/app/main/posts/views/filters/filter-modal.html
@@ -3,6 +3,8 @@
         <filter-form ng-model="filters.form"></filter-form>
         <filter-category ng-model="filters.tags"></filter-category>
     </div>
+    <post-sorting-options order="order" order-by="orderBy" on-change="changeOrder(order, orderBy)"></post-sorting-options>
+
     <filter-status ng-model="filters.status"></filter-status>
     <filter-date date-after-model="filters.date_after" date-before-model="filters.date_before"></filter-date>
     <filter-location center-point-model="filters.center_point" within-km-model="filters.within_km"></filter-location>
