--- a/app/main/posts/views/filters/filter-modal.html
+++ b/app/main/posts/views/filters/filter-modal.html
@@ -4,7 +4,7 @@
         <filter-category ng-model="filters.tags"></filter-category>
     </div>
     <post-sorting-options order="order" order-by="orderBy" on-change="changeOrder(order, orderBy)"></post-sorting-options>
-
+    <filter-saved-search></filter-saved-search>
     <filter-status ng-model="filters.status"></filter-status>
     <filter-date date-after-model="filters.date_after" date-before-model="filters.date_before"></filter-date>
     <filter-location center-point-model="filters.center_point" within-km-model="filters.within_km"></filter-location>
