--- a/app/main/posts/views/filters/filter-saved-search.html
+++ b/app/main/posts/views/filters/filter-saved-search.html
@@ -1,22 +1,12 @@
-<div class="form-field">
-    <label class="hidden" translate="set.find_a_saved_search">Find a saved search</label>
-    <div class="input-with-icon">
-        <svg class="iconic">
-            <use xlink:href="/img/iconic-sprite.svg#magnifying-glass"></use>
-        </svg>
-        <input
-                type="search"
-                ng-model="savedSearchQuery"
-                placeholder="{{ 'set.find_a_saved_search' | translate }}" ng-keydown="searchSearches(savedSearchQuery)"
+<fieldset ng-if="searches.length > 0">
+    <div class="custom-select">
+        <select
+                ng-model="selectedSearch"
+                ng-options="search.id as search.name
+                for
+                search in searches"
         >
+            <option selected="selected" value="" translate="saved_search.select_one"> Select one</option>
+        </select>
     </div>
-</div>
-<div class="modal-body">
-    <div class="listing">
-        <div class="listing-item" ng-repeat="search in searches">
-            <div class="listing-item-primary">
-                <h2 class="listing-item-title"><a href="#" ng-click="goToSearch(search.id)">{{search.name}}</a></h2>
-            </div>
-        </div>
-    </div>
-</div>
+</fieldset>
