--- a/app/main/posts/views/filters/post-sorting-options.html
+++ b/app/main/posts/views/filters/post-sorting-options.html
@@ -14,14 +14,14 @@
           <fieldset>
               <div class="form-field checkbox">
                   <label>
-                      <input type="checkbox" id="unlockedOnTop" value="unlockedOnTop" name="unlockedOnTop" ng-model="unlockedOnTop">
+                      <input type="checkbox" id="unlockedOnTop" value="unlockedOnTop" name="unlockedOnTop" ng-model="orderGroup.unlockedOnTop" ng-change="change()">
                       <span translate="app.unlocked_posts_top">Unlocked posts on top</span>
                   </label>
               </div>
           </fieldset>
           <fieldset>
                   <div class="custom-select">
-                      <select ng-model="orderBy" ng-change="change()">
+                      <select ng-model="orderGroup.orderBy" ng-change="change()">
                           <option value="post_date" translate="post.post_date">Post Date</option>
                           <option value="created" translate="app.date_created">Date created</option>
                           <option value="updated" translate="app.date_updated">Date updated</option>
@@ -31,13 +31,13 @@
           <fieldset>
               <div class="form-field radio">
                   <label>
-                    <input type="radio" id="asc" value="asc" name="order" ng-model="order" ng-change="change()">
+                    <input type="radio" id="asc" value="asc" name="order" ng-model="orderGroup.order" ng-change="change()">
                     <span translate="app.oldest_first">Oldest first</span>
                   </label>
               </div>
               <div class="form-field radio">
                   <label>
-                    <input type="radio" id="desc" value="desc" name="order" ng-model="order" ng-change="change()">
+                    <input type="radio" id="desc" value="desc" name="order" ng-model="orderGroup.order" ng-change="change()">
                     <span translate="app.newest_first">Newest first</span>
                   </label>
               </div>
