Add tests, remove unused file

--- a/app/main/posts/views/filters/filter-modal.html
+++ b/app/main/posts/views/filters/filter-modal.html
@@ -3,7 +3,7 @@
         <filter-form ng-model="filters.form"></filter-form>
         <filter-category ng-model="filters.tags"></filter-category>
     </div>
-    <!-- @DEVNOTE will you please rename this?
+    <!-- @DEVNOTE think about renaming this?
     ...come on. -->
     <post-sorting-options></post-sorting-options>
     <filter-saved-search></filter-saved-search>
