--- a/app/main/posts/views/filters/filter-posts.html
+++ b/app/main/posts/views/filters/filter-posts.html
@@ -11,7 +11,7 @@
             <span class="button-label hidden" translate>app.saved</span>
         </a>
 
-        <a id="togglePostSearchFilters" class="button searchbar-options-filter" ng-click="openFilterModal()">
+        <a id="togglePostSearchFilters" class="button searchbar-options-filter" ng-click="filtersDropdownToggle = !filtersDropdownToggle">
             <svg class="iconic">
                 <use xlink:href="/img/material/svg-sprite-content-symbol.svg#ic_filter_list_24px">
                 </use>
@@ -19,4 +19,5 @@
             <span class="button-label" translate>app.filters</span>
         </a>
     </div>
+    <filters-dropdown filters-dropdown-toggle="filtersDropdownToggle"></filters-dropdown>
 </form>
